--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="progress">
+      <div class="indeterminate"></div>
+    </div>
+  </app-root>
 </body>
 
 </html>
