--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <app-root>
-    <div class="progress">
+    <div class="progress home-loading">
       <div class="indeterminate"></div>
     </div>
   </app-root>
